--- a/public/css/default.css
+++ b/public/css/default.css
@@ -1,18 +1,3 @@
-@media (min-width: 1200px)
-.container {
-    width: 1170px;
-}
-
-@media (min-width: 992px)
-.container {
-    width: 970px;
-}
-
-@media (min-width: 768px)
-.container {
-    width: 750px;
-}
-
 a {
 	color: #666;
 }
@@ -84,8 +69,8 @@ pre code {
 	padding-top: 80px;
 }
 
-.logo {
-	margin-left: 10% !important;
+.nav-header > a.logo {
+	margin-left: 10%;
 	font-size: 2em;
 }
 
@@ -133,4 +118,107 @@ footer {
 .post-nameholder {
 	margin-left: 10px;
 	margin-bottom: 10px;
+}
+
+.post-body {
+    position: relative;
+    display: inline-block;
+    margin: 1.5em 0 1.5em 15px;
+    padding: 15px 30px;
+    min-width: 120px;
+    color: #555;
+    font-size: 16px;
+    background: #FFF;
+    border: solid 1px rgb(0, 145, 175);
+    box-sizing: border-box;
+    border-radius: 5px;
+	word-wrap: break-word;
+}
+
+.post-body:before {
+    content: "";
+    position: absolute;
+    top: 30px;
+    left: -24px;
+    margin-top: -12px;
+    border: 12px solid transparent;
+    border-right: 12px solid #FFF;
+    z-index: 2;
+}
+
+.post-body:after {
+    content: "";
+    position: absolute;
+    top: 30px;
+    left: -27px;
+    margin-top: -14px;
+    border: 14px solid transparent;
+    border-right: 14px solid rgb(0, 145, 175);
+    z-index: -1;
+}
+
+
+.post-cat {
+	position: relative;
+	float: left;
+	top: 24px;
+}
+
+
+@media screen and (min-width: 1200px) {
+	.post-body {
+		width: 1000px;
+	}
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+	.post-body {
+		width: 792px;
+	}	
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px) {
+	.post-body {
+		width: 568px;
+	}
+}
+
+@media screen and (min-width: 550px) and (max-width: 768px) {
+	.post-body {
+		width: 400px;
+	}
+}
+
+@media screen and (max-width: 550px) {
+	.nav-header > a.logo {
+		margin-left: 10px;
+		margin-right: 0;
+	}
+
+	.nav-icons {
+		margin-right: 10px;
+	}
+
+	.nav-icons > a {
+		color: #fff;
+		margin: 4px;
+	}
+
+	.post-body {
+		width: 100%;
+		border: none;
+		margin: 0;
+	}
+
+	.post-body:before {
+		content: none;
+	}
+
+	.post-body:after {
+		content: none;
+	}
+
+	.post-cat {
+		display: none;
+	}
 }
