--- a/public/css/default.css
+++ b/public/css/default.css
@@ -131,7 +131,7 @@ footer {
 .post-body {
     position: relative;
     display: inline-block;
-    margin: 1.5em 0 1.5em 15px;
+    margin: 1.5em 0 0 15px;
     padding: 15px 30px;
     min-width: 120px;
     color: #555;
