--- a/public/css/default.css
+++ b/public/css/default.css
@@ -1,3 +1,31 @@
+.dropdown-toggle:after {
+	display: none;
+}
+
+.header-icon-notification {
+	font-size: 24px;
+}
+
+span[data-notification]:before {
+	margin-left: -24px;
+	position: relative;
+    display: inline-block;
+    font-weight: bold;
+    background-color: #f00;
+    border-radius: 50%;
+    font-size: 14px;
+	min-width: 24px;
+    line-height: 1;
+	text-align: center;
+    padding: 3px;
+    border: 2px solid #fff;
+    box-shadow: 0px 0px 3px #999;
+    top: 0;
+    right: 0;
+    transform: translate(50%, -50%);
+    content: attr(data-notification)"";
+}
+
 a {
 	color: #666;
 }
