--- a/public/css/default.css
+++ b/public/css/default.css
@@ -21,7 +21,7 @@
 	white-space: normal;
 }
 
-span[data-notification]:before {
+.notification-badge:before {
 	margin-left: -24px;
 	position: relative;
     display: inline-block;
@@ -38,7 +38,7 @@ span[data-notification]:before {
     top: 0;
     right: 0;
     transform: translate(50%, -50%);
-    content: attr(data-notification)"";
+    content: attr(data-notification);
 }
 
 a {
