--- a/public/css/default.css
+++ b/public/css/default.css
@@ -134,6 +134,10 @@ img {
 	margin-left: 2%;
 }
 
+.sites-admin {
+	background-color: rgba(132, 132, 132, 0.63);
+}
+
 .nav-icons {
 	margin-top: 12px;
 	float: right;
